<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/br_detail_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/br_rounded_corner"
        android:text="61"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/br_detail_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Tunney's Pasture"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_num"
        app:layout_constraintStart_toEndOf="@+id/br_detail_num"
        app:layout_constraintTop_toTopOf="@+id/br_detail_num" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:background="@color/br_sep_line"
        app:layout_constraintStart_toStartOf="@+id/br_detail_num"
        app:layout_constraintTop_toBottomOf="@+id/br_detail_num" />

    <Button
        android:id="@+id/br_detail_map_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="90dp"
        android:layout_height="57dp"
        android:layout_marginStart="12dp"
        android:text="@string/br_detail_map"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_location_ans"
        app:layout_constraintStart_toEndOf="@+id/br_detail_location_ans"
        app:layout_constraintTop_toTopOf="@+id/br_detail_location_ans"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/br_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/br_detail_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/br_detail_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/br_detail_speed"
        app:layout_constraintStart_toStartOf="@+id/br_detail_location"
        app:layout_constraintTop_toBottomOf="@+id/br_detail_location" />

    <TextView
        android:id="@+id/br_detail_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/br_detail_trip_start"
        app:layout_constraintStart_toStartOf="@+id/br_detail_speed"
        app:layout_constraintTop_toBottomOf="@+id/br_detail_speed" />

    <TextView
        android:id="@+id/br_detail_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/br_detail_time"
        app:layout_constraintStart_toStartOf="@+id/br_detail_start_time"
        app:layout_constraintTop_toBottomOf="@+id/br_detail_start_time" />

    <TextView
        android:id="@+id/br_detail_location_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="-75.923537,45.260904"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_location"
        app:layout_constraintStart_toEndOf="@+id/br_detail_location"
        app:layout_constraintTop_toTopOf="@+id/br_detail_location" />

    <TextView
        android:id="@+id/br_detail_speed_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="N/A"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_speed"
        app:layout_constraintStart_toEndOf="@+id/br_detail_speed"
        app:layout_constraintTop_toTopOf="@+id/br_detail_speed" />

    <TextView
        android:id="@+id/br_detail_start_time_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="10:51"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_start_time"
        app:layout_constraintStart_toEndOf="@+id/br_detail_start_time"
        app:layout_constraintTop_toTopOf="@+id/br_detail_start_time" />

    <TextView
        android:id="@+id/br_detail_time_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="32"
        app:layout_constraintBottom_toBottomOf="@+id/br_detail_time"
        app:layout_constraintStart_toEndOf="@+id/br_detail_time"
        app:layout_constraintTop_toTopOf="@+id/br_detail_time" />

    <Button
        android:id="@+id/br_detail_close_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>